<resources>
    <string name="app_name">Github Users</string>
    <string name="name">name</string>
    <string name="username">username</string>
    <string name="company">company</string>

    <string name="search">search here...</string>

    <string name="detail_username">username</string>
    <string name="detail_company">company</string>

    <string name="valueFollowers">%d Followers</string>
    <string name="valueFollowing">%d Following </string>


    <string name="dark_mode">Dark Mode</string>

    <string name="tab_1">followers</string>
    <string name="tab_2">following</string>
    <string name="btn_add_favorite">button add favorite</string>
    <string name="empty_favorite">Empty favorite</string>

    <string name="setting">setting</string>
    <string name="favorite">favorite</string>
    <string name="added">Data berhasil ditambah</string>

</resources>